# github_debug_researcher

./: .gitignore
.github/workflows/: collect.yml  test.yml
tech-stack-analyzer/: HANDOFF.md  docker-compose.yml
tech-stack-analyzer/collector/: Dockerfile  pyproject.toml
tech-stack-analyzer/collector/scripts/: live_smoke_test.py  seed_usecase_guide.py
tech-stack-analyzer/collector/src/: config.py  main.py
tech-stack-analyzer/collector/src/analysis/: churn.py  qiita_ai_review.py  risk_score.py
tech-stack-analyzer/collector/src/clients/: anthropic_client.py  github_client.py  qiita_client.py
tech-stack-analyzer/collector/src/collectors/: dependency_collector.py  qiita_trend_collector.py  repo_collector.py
tech-stack-analyzer/collector/src/db/: models.py  session.py
tech-stack-analyzer/collector/tests/: test_anthropic_client.py  test_churn.py  test_dependency_collector.py  test_github_client.py  test_qiita_ai_review.py  test_qiita_client.py  test_qiita_trend_collector.py  test_risk_score.py  test_seed_usecase_guide.py
tech-stack-analyzer/scripts/: smoke-test.sh
tech-stack-analyzer/server/: .env.example  Dockerfile  package-lock.json  package.json
tech-stack-analyzer/server/client/: index.html  package-lock.json  package.json  vite.config.js
tech-stack-analyzer/server/client/src/: App.jsx  riskMeta.js  test-setup.js
tech-stack-analyzer/server/src/: app.js  config.js
tech-stack-analyzer/server/tests/: analyze.test.js  analyzeRateLimit.test.js  languageGraphDistribution.test.js  qiitaReviews.test.js  routes.test.js  usecaseGuide.test.js
(+43 files in other folders)
